--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -330,12 +330,12 @@
     <Compile Include="Symbols\Blocks\Block.vb" />
     <Compile Include="Symbols\TypeSymbol.vb" />
     <Compile Include="Symbols\DeclaredObject\SymbolType.vb" />
-    <Compile Include="Symbols\Memory\ArrayBlockOperator.vb" />
+    <Compile Include="Symbols\Memory\Array\ArrayBlockOperator.vb" />
     <Compile Include="Symbols\Memory\ClassType\FieldValue.vb" />
     <Compile Include="Symbols\Memory\ClassType\MetaJSON.vb" />
     <Compile Include="Symbols\Memory\ClassType\ClassMeta.vb" />
     <Compile Include="Symbols\FunctionSymbol\DelegateSymbol.vb" />
-    <Compile Include="Symbols\Memory\ArrayBlock.vb" />
+    <Compile Include="Symbols\Memory\Array\ArrayBlock.vb" />
     <Compile Include="Symbols\Memory\IMemoryObject.vb" />
     <Compile Include="Symbols\Memory\ClassType\UserObject.vb" />
     <Compile Include="SyntaxAnalysis\ObjectOperator.vb" />
