--- a/wasm/Wasm.vbproj
+++ b/wasm/Wasm.vbproj
@@ -328,6 +328,7 @@
     <Compile Include="Compiler\SExpression\AppStarter.vb" />
     <Compile Include="DeclareHelpers.vb" />
     <Compile Include="Symbols\Blocks\Block.vb" />
+    <Compile Include="Symbols\Memory\IntPtr.vb" />
     <Compile Include="Symbols\TypeSymbol.vb" />
     <Compile Include="Symbols\DeclaredObject\SymbolType.vb" />
     <Compile Include="Symbols\Memory\Array\ArrayBlockOperator.vb" />
